--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -1,7 +1,7 @@
 <style>td {vertical-align:top; font-family:arial; font-size:small; background:#eeeeee}</style>
 <table width="100%" height="100%" border="0" cellpadding="2" cellspacing="0">
   <tr><td width="200">
-	   <!-- dieser Block wird am Ende des Semesters wichtig sein, bitte nicht löschen
+	   <!-- dieser Block wird am Ende des Semesters wichtig sein, bitte nicht lï¿½schen
    	    Titel<br /></br />
 	    <a href="Anforderungsliste.htm" target="_blank">Anforderungsliste (01.01.2111)</a><br />
 		<a href="link" target="_blank">Kurzkonzept (01.01.2111)</a><br />
@@ -9,6 +9,8 @@
 		<a href="link" target="_blank">Applikation.swf (01.01.2111)</a><br />
 		-->		
 		<a href="https://github.com/DesiS96/Softwaredesign" target="_blank">Hausaufgabe Nr.0 (04.04.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/L02/" target="_blank">Hausaufgabe Nr.1 (23.04.2020)</a><br />
+	
 	</td>
     <td>Momentan keine Fragen</td>
   </tr>
