--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -11,7 +11,7 @@
 		<a href="https://github.com/DesiS96/Softwaredesign" target="_blank">Hausaufgabe Nr.0 (04.04.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/L02/" target="_blank">Hausaufgabe Nr.1 (23.04.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/strings_umgekehrt.pdf" target="_blank">UML(28.04.2020)</a><br />
-		<a href="https://desis96.github.io/Software-Design/UmgekehrteStrings/worddreher_main.html" target="_blank">Worddreher(01.05.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/UmgekehrteStrings/worddreher_main.html" target="_blank">Worddreher_Umsetzung des Konzeptes von Daniel Dronov(01.05.2020)</a><br />
 	
 	</td>
     <td>Momentan keine Fragen</td>
