--- a/UmgekehrteStrings/worddreher_main.html
+++ b/UmgekehrteStrings/worddreher_main.html
@@ -7,6 +7,7 @@
     <script src="worddreher.js"></script>
 </head>
 <body>
+    <h2>Satz ist im Konzept vorgegeben. Entwicklerkonsole öffnen um die umgedrehten Sätze zu lesen.</h2>
     
 </body>
 </html>
