--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,10 +9,10 @@
 		<a href="link" target="_blank">Applikation.swf (01.01.2111)</a><br />
 		-->		
 		<a href="https://github.com/DesiS96/Softwaredesign" target="_blank">Hausaufgabe Nr.0 (04.04.2020)</a><br />
-		<a href="https://desis96.github.io/Software-Design/L02/" target="_blank">Hausaufgabe Nr.1 (23.04.2020)</a><br />
-		<a href="https://desis96.github.io/Software-Design/strings_umgekehrt.pdf" target="_blank">UML(28.04.2020)</a><br />
+		<a href="https://github.com/DesiS96/Software-Design" target="_blank">Zum Repository</a><br />
 		<a href="https://desis96.github.io/Software-Design/UmgekehrteStrings/worddreher_main.html" target="_blank">Worddreher_Umsetzung des Konzeptes von Daniel Dronov(01.05.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/HausaufgabeL02/index.html" target="_blank">Programmieren in TypeScript(03.05.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/RandomPoems/random_poem.pdf" target="_blank">Gedichtgenerator Konzept(05.05.2020)</a><br />
 	
 	</td>
     <td>Momentan keine Fragen</td>
