--- a/L05/index.html
+++ b/L05/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js"></script>
+    <script src="Person.js"></script>
+    <script src="Gender.js"></script>
+    <script src="Main.js"></script>
 </head>
 <body>
     
