--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,9 +15,9 @@
 		<a href="https://desis96.github.io/Software-Design/RandomPoems/random_poem.pdf" target="_blank">Gedichtgenerator Konzept(05.05.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/RandomPoems/index.html" target="_blank">Gedichtgenerator Umsetzung vom Konzept von Vincent(06.05.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/L05/index.html" target="_blank">Code von Übung L05(15.05.2020)</a><br />
-		<a href="https://desis96.github.io/Software-Design/Quiz/UseCaseDiagram.pdf" target="_blank">Erster Entwurf UseCase-Diagramm(19.05.2020)</a><br />
-		<a href="https://desis96.github.io/Software-Design/Quiz/console_output%20(1).pdf" target="_blank">Erster Entwurf Konsolenausgabe von Quiz(19.05.2020)</a><br />
-		<a href="https://desis96.github.io/Software-Design/Quiz/quiz_UML%20(1).pdf" target="_blank">Erster Entwurf Konsolenausgabe von Quiz(19.05.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/Quiz/UseCaseDiagram.pdf" target="_blank">UseCase-Diagramm(19.05.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/Quiz/console_output%20(1).pdf" target="_blank">Konsolenausgabe von Quiz(19.05.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/Quiz/quiz_UML%20(1).pdf" target="_blank">QuizUML(23.05.2020)</a><br />
 
 	</td>
     <td>Momentan keine Fragen</td>
