--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,7 +17,7 @@
 		<a href="https://desis96.github.io/Software-Design/L05/index.html" target="_blank">Code von Übung L05(15.05.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/Quiz/UseCaseDiagram.pdf" target="_blank">UseCase-Diagramm(19.05.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/Quiz/console_output%20(1).pdf" target="_blank">Konsolenausgabe von Quiz(19.05.2020)</a><br />
-		<a href="https://desis96.github.io/Software-Design/Quiz/quiz_UML%20(1).pdf" target="_blank">QuizUML(23.05.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/Quiz/QuizUMLueberarbeitet.pdf" target="_blank">QuizUML(23.05.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/Quiz/klassendiagramm.pdf" target="_blank">QuizKlassendiagramm(23.05.2020)</a><br />
 
 	</td>
