--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -18,6 +18,8 @@
 		<a href="https://desis96.github.io/Software-Design/Quiz/console_output%20(1).pdf" target="_blank">Konsolenausgabe von Quiz(19.05.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/Quiz/quizUMLueberarbeitet2.pdf" target="_blank">QuizUML(23.05.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/Quiz/klassendiagramm.pdf" target="_blank">QuizKlassendiagramm(23.05.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/Quiz/quizExtendedClassDiag.pdf" target="_blank">QuizExtended Klassendiagramm(26.05.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/Quiz/quizExtendedUML.pdf" target="_blank">QuizExtended UML(26.05.2020)</a><br />
 
 	</td>
     <td>Momentan keine Fragen</td>
