--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src = "quiz.js"></script>
+    <script src = "answer.js"></script>
+    <script src = "question.js"></script>
     <script src = "main.js"></script>
 </head>
 <body>
