--- a/QuizIncludingJson/index.html
+++ b/QuizIncludingJson/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src = "saveAndLoad.js"></script>
     <script src = "quiz.js"></script>
     <script src = "answer.js"></script>
     <script src = "question.js"></script>
