--- a/GenerischerBaum/index.html
+++ b/GenerischerBaum/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="tree.js"></script>
+    <script src="root.js"></script>
+    <script src="treenode.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
