--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -22,6 +22,7 @@
 		<a href="https://desis96.github.io/Software-Design/Quiz/extendedQuiz_newUML.pdf" target="_blank">QuizExtended UML überarbeitet(01.06.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/Quiz/index.html" target="_blank">QuizExtended noch ohne Json(12.06.2020)</a><br />
 		<a href="https://desis96.github.io/Software-Design/GenerischerBaum/index.html" target="_blank">Generischer Baum(21.06.2020)</a><br />
+		<a href="https://desis96.github.io/Software-Design/ModulesAndWebpack/public/index.html" target="_blank">Calculator(28.06.2020)</a><br />
 
 	</td>
     <td>Momentan keine Fragen</td>
