--- a/Abschlussaufgabe/index.html
+++ b/Abschlussaufgabe/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="Character.js" defer></script>
     <script src="removeCharacterFromRoom.js" defer></script>
     <script src="doesRoomContainCharacter.js" defer></script>
     <script src="doesInventoryContainItem.js" defer></script>
     <script src="Item.js" defer></script>
-    <script src="Room.js" defer></script>
+    <script src="Passage.js" defer></script>
+    <script src="PlayerCharacter.js" defer></script>
     <script src="RegularNPC.js" defer></script>
     <script src="IntelligentNPC.js" defer></script>
-    <script src="Character.js" defer></script>
+    <script src="Room.js" defer></script>
     <script src="main.js" defer></script>
 </head>
 <body>
