--- a/Abschlussaufgabe/index.html
+++ b/Abschlussaufgabe/index.html
@@ -14,6 +14,8 @@
     <script src="RegularNPC.js" defer></script>
     <script src="IntelligentNPC.js" defer></script>
     <script src="Room.js" defer></script>
+    <script src="look.js" defer></script>
+    <script src="startGame.js" defer></script>
     <script src="main.js" defer></script>
 </head>
 <body>
